@@ -6,3 +6,4 @@ feedback=2
 readonly=0
 nodot=0
 fileunix=root
+webminsearch=1
