@@ -127,3 +127,4 @@ Beginnings of a Basque translation, thanks to Mireia Lezea.
 Czech translation updates, thanks to Karel Hudan.
 The Webmin RPM now preserves the /etc/webmin directory when un-installed and then re-installed.
 Added a robots.txt file to block indexing of Webmin by search engines.
+The Webmin search box can now be disabled in the Webmin Users module, under "Permissions for all modules".
